--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-router/node": "^7.8.2",
+    "@react-router/serve": "^7.8.2",
+    "@remix-run/router": "^1.23.0",
     "antd": "^5.26.7",
     "axios": "^1.11.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "isbot": "^5.1.30",
+    "localforage": "^1.10.0",
+    "match-sorter": "^8.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-router": "^7.8.2",
+    "react-router-dom": "^7.8.2",
+    "sort-by": "^0.0.2",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
