--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/compatible": "^5.1.4",
     "@react-router/node": "^7.8.2",
     "@react-router/serve": "^7.8.2",
     "@remix-run/router": "^1.23.0",
-    "antd": "^5.26.7",
+    "antd": "^5.27.1",
     "axios": "^1.11.0",
     "isbot": "^5.1.30",
     "localforage": "^1.10.0",
